samples/_failures_safe/1761327578_39ac54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73db8849.c: In function ‘print_distances’:
./samples/SAFE/__tmp_73db8849.c:161:20: error: missing terminating " character
  161 |             printf("Node %d: distance %d\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_73db8849.c:161:13: error: expected expression at end of input
  161 |             printf("Node %d: distance %d\n
      |             ^~~~~~
./samples/SAFE/__tmp_73db8849.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73db8849.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73db8849.c:161:13: error: expected declaration or statement at end of input
